Testing merge conflicts

--- a/popup/index.html
+++ b/popup/index.html
@@ -8,5 +8,7 @@
   <body>
       <p>Hello, World!</p>
       <h2>Haresh was here</h2>
+
+      <h3>Rushil is testing merge conflicts</h3>
   </body>
 </html>
