More merge testing

--- a/popup/index.html
+++ b/popup/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <p>Hello, World!</p>
-      <h2>Haresh was here</h2>
+      <h2>Haresh3 was here</h2>
 
       <h3>Rushil is testing merge conflicts</h3>
   </body>
