Fix popup styling

--- a/popup/index.html
+++ b/popup/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>PA Media and Design Scheduler</h1>
 
-      <p id="options-link">Click here to see schedule</p>
+      <p id="options-link">View Schedule</p>
 
       <script src="./popup.js"></script>
   </body>
