--- a/popup/index.html
+++ b/popup/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./popup.css">
   </head>
   <body>
-      <h1>cAlico Scheduler</h1>
+      <h1>Calico Scheduler</h1>
 
       <p id="options-link">View Schedule</p>
 
